changing window.scrollTo bahavior to auto and creating canvas again for testing scrolling bug on mobile

--- a/style.css
+++ b/style.css
@@ -166,6 +166,7 @@ html {
     color: #666;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+    scroll-behavior: smooth;
 }
 
 body {
